few fixes for index.html

--- a/view/index.html
+++ b/view/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>RESTful-API</title>>
+        <title>RESTful-API</title>
     </head>
     <body>
         <h1>RESTful-API</h1>
